--- a/Index.html
+++ b/Index.html
@@ -10,12 +10,17 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="florida">
-                <h2>Florida</h2>
+            <div class="destination" id="South Africa">
+                <h2>South Africa</h2>
             </div>
-
-            <div class="destination" id="paris">
-                <h2>Paris</h2>
+            <div class="destination" id="Kenya">
+                <h2>Kenya</h2>
+            </div>
+            <div class="destination" id="Ghana">
+                <h2>Ghana</h2>
+            </div>
+            <div class="destination" id="Nigeria">
+                <h2>Nigeri</h2>
             </div>
         </div>
     </div>
